<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Learn" >
    
    <TextView
        android:id="@+id/education_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:hint="@string/learn_text"
        android:textSize="30sp" />
    
    <Button
            android:id="@+id/etiquetteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/education_text"
            android:onClick="goEtiquetteLearn"
            android:text="@string/Etiquette" />
        
        <Button
            android:id="@+id/regionsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etiquetteButton"
            android:onClick="goRegionsLearn"
            android:text="@string/Regions" />
   
        <Button
            android:id="@+id/typesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regionsButton"
            android:onClick="goTypesLearn"
            android:text="@string/Types" />
        
        <Button
            android:id="@+id/productionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/typesButton"
            android:onClick="goProductionLearn"
            android:text="@string/Production" />
        
        <Button
            android:id="@+id/pairingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productionButton"
            android:onClick="goFoodPairingsLearn"
            android:text="@string/pairings" />
    
    <Button
        android:id="@+id/historyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pairingsButton"
        android:onClick="goHistoryLearn"
        android:text="@string/history" />


</RelativeLayout>