<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Quiz" >

    <Button
            android:id="@+id/etiquetteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/regionsButton"
            android:onClick="goEtiquetteQuiz"
            android:text="@string/Etiquette" />
        
        <Button
            android:id="@+id/regionsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/typesButton"
            android:onClick="goRegionsQuiz"
            android:text="@string/Regions" />
   
        <Button
            android:id="@+id/typesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/productionButton"
            android:onClick="goTypesQuiz"
            android:text="@string/Types" />
        
        <Button
            android:id="@+id/productionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/pairingsButton"
            android:onClick="goProductionQuiz"
            android:text="@string/Production" />
        
        <Button
            android:id="@+id/pairingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/historyButton"
            android:onClick="goFoodPairingsQuiz"
            android:text="@string/pairings" />
    
    <Button
        android:id="@+id/historyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pricingsButton"
        android:onClick="goHistoryQuiz"
        android:text="@string/history" />

    <Button
        android:id="@+id/pricingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/historyButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="46dp"
        android:onClick="goPricingQuiz"
        android:text="@string/Pricing" />

</RelativeLayout>