<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regions"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:onClick="goSettings"
            android:text="@string/settings" />
        
         <Button
            android:id="@+id/educationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/settingsButton"
            android:onClick="goEducation"
            android:text="@string/education" />

        <Button
            android:id="@+id/toolsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/educationButton"
            android:layout_centerHorizontal="true"
            android:onClick="goTools"
            android:text="@string/button_tools" />

        <ImageView
            android:id="@+id/tbd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/settingsButton"
            android:layout_alignParentRight="true"
            android:padding="40dp"
            android:src="@drawable/logo" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/toolsButton"
            android:layout_alignLeft="@+id/tbd"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/forwinewine3" />

</RelativeLayout>

